--- a/PriceTag/app/src/main/res/layout/activity_price_tag.xml
+++ b/PriceTag/app/src/main/res/layout/activity_price_tag.xml
@@ -5,16 +5,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-
-
-
-
-
-
-
-
-
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
@@ -91,6 +81,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Obter localização" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Exibir Lista"
+                android:id="@+id/showList"
+                android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
 
