--- a/PriceTag/app/src/main/res/layout/activity_list_places.xml
+++ b/PriceTag/app/src/main/res/layout/activity_list_places.xml
@@ -5,9 +5,10 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"/>
 
 </LinearLayout>
 
