--- a/PriceTag/app/src/main/res/layout/activity_price_tag.xml
+++ b/PriceTag/app/src/main/res/layout/activity_price_tag.xml
@@ -89,6 +89,12 @@
                 android:id="@+id/showList"
                 android:layout_gravity="center_horizontal" />
 
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/listView"
+                android:layout_gravity="center_horizontal" />
+
         </LinearLayout>
 
     </LinearLayout>
