--- a/PriceTag/app/src/main/res/layout/activity_price_tag.xml
+++ b/PriceTag/app/src/main/res/layout/activity_price_tag.xml
@@ -52,7 +52,7 @@
                     android:layout_weight="0.73"
                     android:ems="10" >
 
-                    <requestFocus />
+
                 </EditText>
 
             </LinearLayout>
@@ -80,7 +80,9 @@
                 android:id="@+id/btLocalizar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Obter localização" />
+                android:text="Obter localização">
+                <requestFocus />
+            </Button>
 
             <Button
                 android:layout_width="wrap_content"
