--- a/PriceTag/app/src/main/res/layout/itens_list.xml
+++ b/PriceTag/app/src/main/res/layout/itens_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
                 android:id="@+id/image_view"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:adjustViewBounds="true"/>
+                android:adjustViewBounds="true" />
         </LinearLayout>
 
         <LinearLayout
@@ -32,22 +32,19 @@
                 android:id="@+id/text_view_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/text_view_street"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
-                />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/text_view_dist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
-                />
+                android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
