--- a/PriceTag/app/src/main/res/layout/itens_list.xml
+++ b/PriceTag/app/src/main/res/layout/itens_list.xml
@@ -12,14 +12,14 @@
         android:weightSum="1">
 
         <LinearLayout
-            android:layout_width="65dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/image_view"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:adjustViewBounds="true" />
         </LinearLayout>
 
@@ -32,19 +32,20 @@
                 android:id="@+id/text_view_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp" />
+                android:textStyle="bold"
+                android:textSize="14sp"/>
 
             <TextView
                 android:id="@+id/text_view_street"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/text_view_dist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp" />
+                android:textSize="10sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
