--- a/PriceTag/app/src/main/res/layout/activity_price_tag.xml
+++ b/PriceTag/app/src/main/res/layout/activity_price_tag.xml
@@ -82,7 +82,7 @@
                 android:id="@+id/btLocalizar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Obter localização">
+                android:text="Obter Lista">
 
                 <requestFocus />
             </Button>
